# project-judge

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.dev.yml  compose.eval.yml  compose.host.yml  compose.yml  pyproject.toml
docs/: architecture.md  data-sources.md  governance.md  grading-rules.md  product-proposal.md  system-design.md  tech-stack.md
docs/decisions/: 0001-tool-use-loop-pattern.md  0002-deterministic-over-llm.md  0003-e2b-sandbox-for-code.md  0004-prompt-injection-defense.md  0005-penalty-from-pr-created-at.md  0006-majority-vote-scoring.md
docs/diagrams/: aact.config.ts  c4-component.puml  c4-container.puml  c4-context.puml  data-flow.puml  workflow.puml
docs/eval/: baseline-results.md  methodology.md
docs/safety/: data-handling.md  escalation-policy.md  injection-defense.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  reliability.md  serving-config.md  tools-apis.md
scripts/: setup_sheets.py
src/judge/: __main__.py  settings.py
src/judge/agent/: graph.py  prompt.py
src/judge/agent/tools/: __init__.py  artifacts.py  comment.py  content.py  deadline.py  dod.py  past_reviews.py  read_file.py  results.py  roster.py  sandbox.py  spec.py
src/judge/github/: auth.py  client.py  helpers.py
src/judge/llm/: client.py  sanitize.py
src/judge/models/: pr.py  roster.py  rubric.py
src/judge/sheets/: cache.py  client.py
src/judge/tasks/: answer_question.py  broker.py  grade_pr.py
src/judge/webhook/: app.py  router.py
tests/: conftest.py
tests/test_agent/test_tools/: test_artifacts.py  test_deadline.py  test_dod.py  test_past_reviews.py  test_pr_context.py  test_results.py  test_roster.py  test_spec.py
tests/test_eval/: conftest.py  run_eval.py  test_scenarios.py
tests/test_eval/fixtures/bad_code_repo/: Dockerfile  docker-compose.yml  main.py
tests/test_eval/judge/: llm_judge.py  models.py  trajectory.py
tests/test_eval/mocks/: __init__.py  github_mock.py  sandbox_mock.py  sheets_mock.py
tests/test_eval/scenarios/: bad_code.py  base.py  empty_docs.py  injection_attempt.py  partial_completion.py  perfect_work.py
tests/test_github/: test_auth.py  test_helpers.py
tests/test_llm/: test_sanitize.py
tests/test_sheets/: test_cache.py
tests/test_webhook/: test_app.py  test_router.py
