[project]
name = "project-judge"
version = "0.1.0"
description = "MAS для автоматической проверки студенческих проектов в GitHub Classroom"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogoogle>=5.17.0",
    "e2b>=2.15.3",
    "gidgethub[httpx]>=5.4.0",
    "granian>=2.7.2",
    "httpx>=0.28.1",
    "langfuse>=4.0.1",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.ty]
python-version = "3.13"
