[project]
name = "project-judge"
version = "0.1.0"
description = "MAS для автоматической проверки студенческих проектов в GitHub Classroom"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogoogle>=5.17.0",
    "e2b>=2.15.3",
    "gidgethub[httpx]>=5.4.0",
    "granian>=2.7.2",
    "httpx>=0.28.1",
    "langfuse>=4.0.1",
    "langchain-openai>=0.3",
    "langgraph>=1.1.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pre-commit",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade — modern python syntax
    "B",      # flake8-bugbear — common bugs
    "ASYNC",  # flake8-async — async antipatterns
    "S",      # flake8-bandit — security
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "TC",     # flake8-type-checking — move imports behind TYPE_CHECKING
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # assert — ok in tests
    "RET504", # unnecessary assignment before return
    "B008",   # function call in default arg — common in DI
    "RUF001", # ambiguous unicode — prompts are in Russian
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.13"
python = ".venv"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "warn"
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-type-form = "error"
division-by-zero = "error"

[tool.ty.analysis]
allowed-unresolved-imports = ["langchain_openai"]

[tool.ty.src]
exclude = [".venv/"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
